Add button to start the game

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
-  
+  <h1>Open the browser's console and click the button bellow</h1>
+  <button id="button">Play</button>
 </body>
 </html>
