Change function name

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <body>
   <h1>Open the browser's console and click the button bellow</h1>
-  <button onclick="play()">Play</button>
+  <button onclick="start()">Play</button>
 </body>
 </html>
