Refactor original code

--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <script src="./scripts/script.js"></script>
+  <style>
+    #buttons > button {
+
+      padding: 0.3em;
+      font-size: 2em;
+    }
+  </style>
+  <script src="./scripts/script.js" defer></script>
   <title>Rock Paper Scissors</title>
 </head>
 
 <body>
-  <h1>Open the browser's console and click the button bellow</h1>
-  <button onclick="start()">Play</button>
+  <h1>ROCK PAPER SCISSORS</h1>
+
+  <div id="scoreboard">
+    <div id="text">
+      <p>Click the buttons bellow to start.</p>
+    </div>
+    <div id="numbers">
+      <p>Your score: 0. Computer score: 0.</p>
+    </div>
+  </div>
+
+  <div id="buttons">
+    <button id="rock">✊</button>
+    <button id="paper">✋</button>
+    <button id="scissors">✌️</button>
+  </div>
+
+  <div id="result"></div>
 </body>
 </html>
